--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+   
+
     <title>Document</title>
 </head>
 <body>
@@ -18,8 +20,8 @@
 
     <!-- Search Bar -->
     <nav>
-        <input type="text" placeholder="Search for a country">
-        <button>search</button>
+        <input type="text" placeholder="Search for a country" id="cityInput">
+        <button id="search">search</button>
     </nav>
 
     <!-- Images -->
@@ -44,6 +46,16 @@
         <div class="Euro">1.17 Euro</div>
     </div>
 
+<!-- map -->
+<div id="map" style="height: 50vh; width:100%; background-color: blueviolet;"></div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+     <!--google map links  -->
+    <script defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQhZnG76vyt0FnliqNxQa_Npqa1hrYn2c&callback=initMap">
+    </script>
+
+    <script src="assets/js/map.js"></script>
 </body>
 </html>
