--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
    
 
@@ -46,6 +47,10 @@
         <div class="Euro">1.17 Euro</div>
     </div>
 
+    <!-- Airports -->
+    <h2>airports</h2>
+    <div class="display"></div>
+
 <!-- map -->
 <div id="map" style="height: 50vh; width:100%; background-color: blueviolet;"></div>
 
@@ -57,5 +62,6 @@
     </script>
 
     <script src="assets/js/map.js"></script>
+    <script src="assets/js/Airports.js"></script>
 </body>
 </html>
