--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 
-    <title>Document</title>
+    <title>GlobalGlide</title>
 </head>
 
 <body>
@@ -28,9 +28,6 @@
     <!-- Images -->
     <div id="sliding-images">
         <div id="image-container">
-            <img class="slide" src="" alt="Image 1">
-            <img class="slide" src="" alt="Image 2">
-            <img class="slide" src="" alt="Image 3">
         </div>
     </div>
 
@@ -61,9 +58,13 @@
     <script defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQhZnG76vyt0FnliqNxQa_Npqa1hrYn2c&callback=initMap">
         </script>
-    <script type="text/javascript" src="assets/js/map.js"></script>
+    <script type="text/javascript" src="assets/js/map.js"></script> 
     <!-- Point of interest, restaurant -->
-    <script type="text/javascript" src="assets/js/poi.js"></script>
+    <!-- <script type="text/javascript" src="assets/js/poi.js"></script>
+    <script type="text/javascript" src="assets/js/photo.js"></script> -->
+    <script type="text/javascript" src="assets/js/citysofcountry.js"></script>
+
+
 </body>
 
 </html>
