--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         </script>
     <script type="text/javascript" src="assets/js/map.js"></script> 
     <!-- Point of interest, restaurant -->
-    <!-- <script type="text/javascript" src="assets/js/poi.js"></script>
-    <script type="text/javascript" src="assets/js/photo.js"></script> -->
+    <script type="text/javascript" src="assets/js/poi.js"></script> -->
+    <script type="text/javascript" src="assets/js/photo.js"></script>
     <script type="text/javascript" src="assets/js/citysofcountry.js"></script>
 
 
