--- a/index.html
+++ b/index.html
@@ -7,45 +7,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
-
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>GlobalGlide</title>
 </head>
 
-<body>
+<body style="background-image: url('./assets/images/background.jpg'); background-size: cover;">
     <!-- Header -->
     <header>
         <div class="logo"></div>
-        <h1 class="name">GlobalGlide</h1>
+        <h1 class="name m-3">GlobalGlide</h1>
     </header>
 
     <!-- Search Bar -->
-    <nav>
-        <input type="text" placeholder="Search for a country" id="cityInput">
-        <button id="search">search</button>
-    </nav>
+    <div>
+        <input type="text" placeholder="Search for a country" id="countryInput" class="ms-3">
+        <button id="search" class="d-block bg-gradient ms-3 mt-1 mb-3">Search</button>
+    </div>
 
-    <!-- Images -->
-    <div id="sliding-images">
-        <div id="image-container">
+    <div>
+        <h2 class="advert w-25" style="position: absolute; top: 50%;">Discover comprehensive destination details
+            conveniently gathered in one location for your
+            travel.</h2>
+    </div>
+
+    <!-- cities images -->
+    <div class="col ps-0">
+        <div class="images d-flex justify-content-around flex-row flex-wrap mb-2 w-100 pe-0">
+            <!-- image1 -->
+            <div class="city-photo d-none m-2 p-0 text-decoration-none" id="">
+                <div class="card city rounded-4 border border-info border-4 w-100 m-0 h-100">
+                    <img class="card-img-top rounded-3" alt="city-monument">
+                    <div class="card-body">
+                        <h3 class="card-title text-black"></h3>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
+            </div>
+            <!-- image2 -->
+            <div class="city-photo d-none m-2 p-0 text-decoration-none" id="">
+                <div class="card city rounded-4 border border-info border-4 w-100 m-0 h-100">
+                    <img class="card-img-top rounded-3" src="" alt="city-monument">
+                    <div class="card-body">
+                        <h3 class="card-title text-black"></h3>
+                        <p class="card-text">
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!-- image3 -->
+            <div class="city-photo d-none m-2 p-0 text-decoration-none" id="city-photo">
+                <div class="card city rounded-4 border border-info border-4 w-100 m-0 h-100">
+                    <img class="card-img-top rounded-3" src="" alt="city-monument">
+                    <div class="card-body">
+                        <h3 class="card-title text-black"></h3>
+                        <p class="card-text">
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
-    <!-- Country descriptions -->
-    <div id="country-description">
-        <h2 class="title"></h2>
-        <p></p>
+
+    <!--city points of interest -->
+    <div id="city-poi" class="row mt-3">
+        <div class="d-none poi col-9 border border-1 border-black">
+            <h2 class="title"></h2>
+        </div>
+        <div class="poi d-none col-3 border rounded-4 border-4 border-black" id="exchange-rate">
+            <h3>Exchange Rate</h3>
+            <table>
+                <tr class="row1">
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr class="row2">
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr class="row3">
+                    <td></td>
+                    <td></td>
+                </tr>
+        </div>
     </div>
 
-    <!-- Exchange rate -->
-    <div id="exchange-rate">
-        <h2 class="Base-currency"></h2>
-        <div class="pound">1 Pound sterling</div>
-        <div class="Euro">1.17 Euro</div>
-    </div>
+
 
     <!-- map -->
-    <div id="map" style="height: 50vh; width:100%; background-color: blueviolet;"></div>
+    <!-- <div id="map" style="height: 50vh; width:100%; background-color: blueviolet;"></div> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -55,14 +105,18 @@
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!--google map links  -->
-    <script defer
+    <!-- <script defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQhZnG76vyt0FnliqNxQa_Npqa1hrYn2c&callback=initMap">
-        </script>
-    <script type="text/javascript" src="assets/js/map.js"></script> 
+        </script> -->
+    <script type="text/javascript" src="assets/js/script.js"></script>
+    <!-- <script type="text/javascript" src="assets/js/map.js"></script>  -->
     <!-- Point of interest, restaurant -->
-    <script type="text/javascript" src="assets/js/poi.js"></script> -->
+    <script type="text/javascript" src="assets/js/citiesofcountry.js"></script>
+    <script type="text/javascript" src="assets/js/currency.js"></script>
+    <script type="text/javascript" src="assets/js/poi.js"></script>
     <script type="text/javascript" src="assets/js/photo.js"></script>
-    <script type="text/javascript" src="assets/js/citysofcountry.js"></script>
+
+
 
 
 </body>
