--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>GlobalGlide</title>
 </head>
 
-<body style="background-image: url('./assets/images/background.jpg'); background-size: cover;">
+<body class="page2" style="background-image: url('./assets/images/background.jpg'); background-size: cover;">
     <!-- Header -->
     <header>
         <div class="logo"></div>
@@ -40,12 +40,12 @@
             travel.</h2>
     </div>
 
-    <!-- cities images -->
+    <!-- cities images rounded-4 border border-info border-4 w-100 m-0 h-100-->
     <div class="col ps-0">
         <div class="images d-flex justify-content-around flex-row flex-wrap mb-2 w-100 pe-0">
             <!-- image1 -->
             <div class="city-photo d-none m-2 p-0 text-decoration-none" id="">
-                <div class="card city rounded-4 border border-info border-4 w-100 m-0 h-100">
+                <div class="card city ">
                     <img class="card-img-top rounded-3" alt="city-monument">
                     <div class="card-body">
                         <h3 class="card-title text-black"></h3>
@@ -53,9 +53,9 @@
                     </div>
                 </div>
             </div>
-            <!-- image2 -->
-            <div class="city-photo d-none m-2 p-0 text-decoration-none" id="">
-                <div class="card city rounded-4 border border-info border-4 w-100 m-0 h-100">
+            <!-- image2  rounded-4 border border-info border-4 w-100 m-0 h-100-->
+            <div class="city-photo d-none m-2 p-0 text-decoration-none " id="">
+                <div class="card city ">
                     <img class="card-img-top rounded-3" src="" alt="city-monument">
                     <div class="card-body">
                         <h3 class="card-title text-black"></h3>
@@ -66,7 +66,7 @@
             </div>
             <!-- image3 -->
             <div class="city-photo d-none m-2 p-0 text-decoration-none" id="city-photo">
-                <div class="card city rounded-4 border border-info border-4 w-100 m-0 h-100">
+                <div class="card city ">
                     <img class="card-img-top rounded-3" src="" alt="city-monument">
                     <div class="card-body">
                         <h3 class="card-title text-black"></h3>
@@ -80,11 +80,11 @@
 
 
     <!--city points of interest -->
-    <div id="city-poi" class="row mt-3">
+    <div class="" id="city-poi" class="row mt-3">
         <div class="d-none poi col-9 border border-1 border-black">
             <h2 class="title"></h2>
         </div>
-        <div class="poi d-none col-3 border rounded-4 border-4 border-black" id="exchange-rate">
+        <div class="poi d-none col-3 " id="exchange-rate">
             <h3>Exchange Rate</h3>
             <table>
                 <tr class="row1">
