--- a/index.html
+++ b/index.html
@@ -12,27 +12,36 @@
     
     <link href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
- 
+
     <title>GlobalGlide</title>
 </head>
 
-<body style="background-image: url('./assets/images/background.jpg'); background-size: cover;">
+<body>
     <!-- Header -->
     <header>
-        <div class="logo"></div>
-        <h1 class="name m-3">GlobalGlide</h1>
+        <div class="video-container">
+            <video autoplay muted loop>
+                <source src="./assets/images/video2.mp4" type="video/mp4">
+            </video>
+            <h1 class="video-text"><span>Globe</span> Glide</h1>
+            <div class="advert-container">
+                <h2 class="advert">Discover comprehensive destination details conveniently gathered in one location for your travel.</h2>
+            </div>
+        </div>
     </header>
 
     <!-- Search Bar -->
-    <div>
-        <input type="text" placeholder="Search for a country" id="countryInput" class="ms-3">
-        <button id="search" class="d-block bg-gradient ms-3 mt-1 mb-3">Search</button>
-    </div>
-
-    <div>
-        <h2 class="advert w-25" style="position: absolute; top: 50%;">Discover comprehensive destination details
-            conveniently gathered in one location for your
-            travel.</h2>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6">
+                <div class="input-group">
+                    <input type="text" placeholder="Search for a country..." id="countryInput" class="form-control">
+                    <div class="input-group-append">
+                        <button id="search" class="btn btn-outline-success">Search</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- cities images -->
@@ -97,9 +106,18 @@
         </div>
     </div>
 
+    
+
 <!-- Airports -->
-<h1>Airports</h1>
-<div class="display"></div>
+<div>
+    <h2>Airports</h2>
+    <div class="display"></div>
+</div>
+
+
+<!-- map -->
+<h2>map</h2>
+<div id="map"></div>
 
 
 
@@ -111,9 +129,9 @@
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!--google map links  -->
-    <!-- <script defer
+    <script defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQhZnG76vyt0FnliqNxQa_Npqa1hrYn2c&callback=initMap">
-        </script> -->
+        </script>
     <script type="text/javascript" src="assets/js/script.js"></script>
     <!-- <script type="text/javascript" src="assets/js/map.js"></script>  -->
     <!-- Point of interest, restaurant -->
