--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     
     <link href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<!-- jquery-ui -->
+        <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css"> -->
  
     <title>GlobalGlide</title>
 </head>
@@ -78,6 +80,16 @@
     <div id="city-poi" class="row mt-3">
         <div class="d-none poi col-9 border border-1 border-black">
             <h2 class="title"></h2>
+
+            <select class="poi custom-select custom-select-lg mb-3" id="poiselector">
+                <option selected>Select a point of interest</option>
+                <option>Cinema</option>
+                <option>Hotel</option>
+                <option>Coffee</option>
+                <option>Restaurant</option>
+                <option>Museum</option>
+                <option>Shopping center</option>
+              </select>
         </div>
         <div class="poi d-none col-3 border rounded-4 border-4 border-black" id="exchange-rate">
             <h3>Exchange Rate</h3>
@@ -109,6 +121,8 @@
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- jquery-ui -->
+    <!-- <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script> -->
     <!--google map links  -->
     <!-- <script defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQhZnG76vyt0FnliqNxQa_Npqa1hrYn2c&callback=initMap">
@@ -120,7 +134,7 @@
     <script type="text/javascript" src="assets/js/currency.js"></script>
     <script type="text/javascript" src="assets/js/poi.js"></script>
     <script type="text/javascript" src="assets/js/photo.js"></script>
-    <script src="assets/js/map.js"></script>
+    <!-- <script src="assets/js/map.js"></script> -->
     <script src="assets/js/Airports.js"></script>
 </body>
 
