--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 
-//<body class="page2" style="background-image: url('./assets/images/background.jpg'); background-size: cover;">
+
 
 <body>
 
@@ -103,6 +103,7 @@
                 <option>Shopping center</option>
               </select>
         </div>
+
         <div class="poi d-none col-3 " id="exchange-rate">
             <h3>Exchange Rate</h3>
             <table>
@@ -118,6 +119,7 @@
                     <td></td>
                     <td></td>
                 </tr>
+               </table>
         </div>
     </div>
 
@@ -125,6 +127,10 @@
 <h1>Airports</h1>
 <div class="display"></div>
 
+
+<!-- map -->
+<h2>map</h2>
+<div id="map"></div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -136,10 +142,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- jquery-ui -->
     <!-- <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script> -->
+    
     <!--google map links  -->
-    <!-- <script defer
+    <script defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQhZnG76vyt0FnliqNxQa_Npqa1hrYn2c&callback=initMap">
-        </script> -->
+        </script>
+
     <script type="text/javascript" src="assets/js/script.js"></script>
     <!-- <script type="text/javascript" src="assets/js/map.js"></script>  -->
     <!-- Point of interest, restaurant -->
@@ -147,7 +155,7 @@
     <script type="text/javascript" src="assets/js/currency.js"></script>
     <script type="text/javascript" src="assets/js/poi.js"></script>
     <script type="text/javascript" src="assets/js/photo.js"></script>
-    <!-- <script src="assets/js/map.js"></script> -->
+    <script src="assets/js/map.js"></script>
     <script src="assets/js/Airports.js"></script>
 </body>
 
