further style added to Airport and map

--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
     </div>
 
 <!-- Airports -->
-<h1>Airports</h1>
+
 <div class="display"></div>
 
 
-<!-- map -->
-<h2>map</h2>
+
+<!-- <h2>map</h2> -->
 <div id="map"></div>
 
 
