--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
-    
-    <link href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <!-- <link href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
 
 
     <title>GlobalGlide</title>
 </head>
 
 
-//<body class="page2" style="background-image: url('./assets/images/background.jpg'); background-size: cover;">
+<!-- <body class="page2" style="background-image: url('./assets/images/background.jpg'); background-size: cover;"> -->
 
 <body>
 
@@ -30,7 +30,8 @@
             </video>
             <h1 class="video-text"><span>Globe</span> Glide</h1>
             <div class="advert-container">
-                <h2 class="advert">Discover comprehensive destination details conveniently gathered in one location for your travel.</h2>
+                <h2 class="advert">Discover comprehensive destination details conveniently gathered in one location for
+                    your travel.</h2>
             </div>
         </div>
     </header>
@@ -89,19 +90,26 @@
 
 
     <!--city points of interest -->
-    <div class="" id="city-poi" class="row mt-3">
-        <div class="d-none poi col-9 border border-1 border-black">
-            <h2 class="title"></h2>
+    <div id="city-poi" class="row mt-3">
+        <div class="d-none poi col-8 border border-1">
+            <h2 class="city-name"></h2>
+            <div class="row p-0 me-1">
+                <div class="col-4">
+                    <select class="poi d-none custom-select custom-select-lg mb-3 me-1" id="poiselector">
+                        <option selected>Select a point of interest</option>
+                        <option>Cinema</option>
+                        <option>Hotel</option>
+                        <option>Coffee</option>
+                        <option>Restaurant</option>
+                        <option>Museum</option>
+                    </select>
+                </div>
 
-            <select class="poi custom-select custom-select-lg mb-3" id="poiselector">
-                <option selected>Select a point of interest</option>
-                <option>Cinema</option>
-                <option>Hotel</option>
-                <option>Coffee</option>
-                <option>Restaurant</option>
-                <option>Museum</option>
-                <option>Shopping center</option>
-              </select>
+                <div class="col poi-address m-2">
+
+                </div>
+
+            </div>
         </div>
         <div class="poi d-none col-3 " id="exchange-rate">
             <h3>Exchange Rate</h3>
@@ -121,9 +129,11 @@
         </div>
     </div>
 
-<!-- Airports -->
-<h1>Airports</h1>
-<div class="display"></div>
+    <!-- Airports -->
+    <!-- <div id="airports">
+        <h3>Airports</h3>
+        <div class="display"></div>
+    </div> -->
 
 
 
