--- a/index.html
+++ b/index.html
@@ -126,15 +126,14 @@
                     <td></td>
                     <td></td>
                 </tr>
+            </table>
         </div>
     </div>
 
-    <!-- Airports -->
-    <!-- <div id="airports">
-        <h3>Airports</h3>
-        <div class="display"></div>
-    </div> -->
-
+<!-- Airports -->
+<div class="display"></div>
+<!-- <h2>map</h2> -->
+<div id="map"></div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -147,9 +146,9 @@
     <!-- jquery-ui -->
     <!-- <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script> -->
     <!--google map links  -->
-    <!-- <script defer
+    <script defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQhZnG76vyt0FnliqNxQa_Npqa1hrYn2c&callback=initMap">
-        </script> -->
+        </script>
     <script type="text/javascript" src="assets/js/script.js"></script>
     <!-- <script type="text/javascript" src="assets/js/map.js"></script>  -->
     <!-- Point of interest, restaurant -->
@@ -157,7 +156,7 @@
     <script type="text/javascript" src="assets/js/currency.js"></script>
     <script type="text/javascript" src="assets/js/poi.js"></script>
     <script type="text/javascript" src="assets/js/photo.js"></script>
-    <!-- <script src="assets/js/map.js"></script> -->
+    <script src="assets/js/map.js"></script>
     <script src="assets/js/Airports.js"></script>
 </body>
 
