--- a/index.html
+++ b/index.html
@@ -10,15 +10,9 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
 
-    <!-- <link href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
-
-
     <title>GlobalGlide</title>
 </head>
 
-
-<!-- <body class="page2" style="background-image: url('./assets/images/background.jpg'); background-size: cover;"> -->
 
 <body>
 
@@ -38,7 +32,7 @@
 
     <!-- Search Bar -->
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center mb-2">
             <div class="col-12 col-md-6">
                 <div class="input-group">
                     <input type="text" placeholder="Search for a country..." id="countryInput" class="form-control">
@@ -89,28 +83,9 @@
     </div>
 
 
-    <!--city points of interest -->
-    <div id="city-poi" class="row mt-3">
-        <div class="d-none poi col-8 border border-1">
-            <h2 class="city-name"></h2>
-            <div class="row p-0 me-1">
-                <div class="col-4">
-                    <select class="poi d-none custom-select custom-select-lg mb-3 me-1" id="poiselector">
-                        <option selected>Select a point of interest</option>
-                        <option>Cinema</option>
-                        <option>Hotel</option>
-                        <option>Coffee</option>
-                        <option>Restaurant</option>
-                        <option>Museum</option>
-                    </select>
-                </div>
-
-                <div class="col poi-address m-2">
-
-                </div>
-
-            </div>
-        </div>
+    <!--city points of interest  and exchange rate-->
+    <div id="country-info" class="row mt-3">
+        <!-- Exchange rate -->
         <div class="poi d-none col-3 " id="exchange-rate">
             <h3>Exchange Rate</h3>
             <table>
@@ -128,12 +103,33 @@
                 </tr>
             </table>
         </div>
+        <!-- Point of interests -->
+        <div class="d-none poi col-8 border border-1 poi-container">
+            <h2 class="city-name"></h2>
+            <div class="row p-0 me-1">
+                <!-- Point of interests selector -->
+                <div class="col-4">
+                    <select class="poi d-none custom-select custom-select-lg mb-3 me-1" id="poiselector">
+                        <option selected>Select a point of interest</option>
+                        <option>Cinema</option>
+                        <option>Hotel</option>
+                        <option>Coffee</option>
+                        <option>Restaurant</option>
+                        <option>Museum</option>
+                    </select>
+                    
+                </div>
+                <!-- Point of interest display -->
+                <div class="col poi-address m-2">
+
+                </div>
+            </div>
+        </div>
     </div>
 
-<!-- Airports -->
-<div class="display"></div>
-<!-- <h2>map</h2> -->
-<div id="map"></div>
+    <!-- Airports -->
+    <div class="display"></div>
+    <div id="map"></div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -143,21 +139,19 @@
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- jquery-ui -->
-    <!-- <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script> -->
+
     <!--google map links  -->
     <script defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQhZnG76vyt0FnliqNxQa_Npqa1hrYn2c&callback=initMap">
         </script>
     <script type="text/javascript" src="assets/js/script.js"></script>
-    <!-- <script type="text/javascript" src="assets/js/map.js"></script>  -->
     <!-- Point of interest, restaurant -->
     <script type="text/javascript" src="assets/js/citiesofcountry.js"></script>
     <script type="text/javascript" src="assets/js/currency.js"></script>
     <script type="text/javascript" src="assets/js/poi.js"></script>
     <script type="text/javascript" src="assets/js/photo.js"></script>
-    <script src="assets/js/map.js"></script>
-    <script src="assets/js/Airports.js"></script>
+    <script type="text/javascript" src="assets/js/map.js"></script>
+    <script type="text/javascript" src="assets/js/Airports.js"></script>
 </body>
 
 </html>
