--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 
     <!-- Airports -->
     <div class="display"></div>
+    <!-- map -->
     <div id="map"></div>
 
 
@@ -152,7 +153,7 @@
     <script type="text/javascript" src="assets/js/poi.js"></script>
     <script type="text/javascript" src="assets/js/photo.js"></script>
     <script type="text/javascript" src="assets/js/map.js"></script>
-    <script type="text/javascript" src="assets/js/Airports.js"></script>
+    <script type="text/javascript" src="assets/js/airports.js"></script>
 </body>
 
 </html>
