--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                         <option>Coffee</option>
                         <option>Restaurant</option>
                         <option>Museum</option>
+                        <option>Map</option>
                     </select>
                     
                 </div>
@@ -129,9 +130,9 @@
     </div>
 
     <!-- Airports -->
-    <div class="display"></div>
+    <div class="d-none display"></div>
     <!-- map -->
-    <div id="map"></div>
+    <div class="d-none" id="map"></div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
