airports limited to 5

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
 
     <!-- Airports -->
-    <div class="d-none display"></div>
+    <div class=" display"></div>
     <!-- map -->
     <div class="d-none" id="map"></div>
 
