--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
     <!-- Search Bar -->
     <div class="container">
-        <div class="row justify-content-center mb-2">
+        <div class="row justify-content-center mb-2" style="margin-bottom:3cm;">
             <div class="col-12 col-md-6">
-                <div class="input-group">
-                    <input type="text" placeholder="Search for a country..." id="countryInput" class="form-control">
+                <div class="input-group ">
+                    <input  type="text" placeholder="Search for a country..." id="countryInput" class="form-control">
                     <div class="input-group-append">
                         <button id="search" class="btn btn-outline-success">Search</button>
                     </div>
@@ -47,7 +47,7 @@
 
     <!-- cities images rounded-4 border border-info border-4 w-100 m-0 h-100-->
     <div class="col ps-0">
-        <div class="images d-flex justify-content-around flex-row flex-wrap mb-2 w-100 pe-0">
+        <div class="images d-flex justify-content-around flex-row flex-wrap mb-2 w-100 pe-0 ">
             <!-- image1 -->
             <div class="city-photo d-none m-2 p-0 text-decoration-none" id="">
                 <div class="card city ">
@@ -105,11 +105,11 @@
             </table>
         </div>
         <!-- Point of interests -->
-        <div class="d-none poi col-8 border border-1 poi-container">
+        <div class="d-none poi poistlye">
             <h2 class="city-name"></h2>
             <div class="row p-0 me-1">
                 <!-- Point of interests selector -->
-                <div class="col-4">
+                <div class="col-4 poioption">
                     <select class="poi d-none custom-select custom-select-lg mb-3 me-1" id="poiselector">
                         <option selected>Select a point of interest</option>
                         <option>Cinema</option>
@@ -117,7 +117,6 @@
                         <option>Coffee</option>
                         <option>Restaurant</option>
                         <option>Museum</option>
-                        <option>Map</option>
                     </select>
                     
                 </div>
@@ -130,9 +129,13 @@
     </div>
 
     <!-- Airports -->
-    <div class=" display"></div>
+    <div class="display">
+
+    </div>
     <!-- map -->
-    <div class="d-none" id="map"></div>
+    <div id="map">
+        
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
