--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="card city ">
                     <img class="card-img-top rounded-3" alt="city-monument">
                     <div class="card-body">
-                        <h3 class="card-title text-black"></h3>
+                        <h3 class="card-title text-black text-center"></h3>
                         <p class="card-text"></p>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                 <div class="card city ">
                     <img class="card-img-top rounded-3" src="" alt="city-monument">
                     <div class="card-body">
-                        <h3 class="card-title text-black"></h3>
+                        <h3 class="card-title text-black text-center"></h3>
                         <p class="card-text">
                         </p>
                     </div>
@@ -74,7 +74,7 @@
                 <div class="card city ">
                     <img class="card-img-top rounded-3" src="" alt="city-monument">
                     <div class="card-body">
-                        <h3 class="card-title text-black"></h3>
+                        <h3 class="card-title text-black text-center"></h3>
                         <p class="card-text">
                         </p>
                     </div>
@@ -105,7 +105,7 @@
             </table>
         </div>
         <!-- Point of interests -->
-        <div class="d-none poi poistlye">
+        <div class="d-none col poi poistlye">
             <h2 class="city-name"></h2>
             <div class="row p-0 me-1">
                 <!-- Point of interests selector -->
@@ -119,7 +119,7 @@
                         <option>Museum</option>
                         <option>Map</option>
                     </select>
-                    
+                  
                 </div>
                 <!-- Point of interest display -->
                 <div class="col poi-address m-2">
