--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
         </script>
     <script type="text/javascript" src="./assets/js/script.js"></script>
     <!-- Point of interest, restaurant -->
-    <script type="text/javascript" src="./assets/js/citiesofcountry.js"></script>
-    <script type="text/javascript" src="./assets/js/currency.js"></script>
-    <script type="text/javascript" src="./assets/js/poi.js"></script>
-    <script type="text/javascript" src="./assets/js/photo.js"></script>
-    <script type="text/javascript" src="./assets/js/map.js"></script>
-    <script type="text/javascript" src="./assets/js/airports.js"></script>
+    <script src="./assets/js/citiesofcountry.js"></script>
+    <script  src="./assets/js/currency.js"></script>
+    <script  src="./assets/js/poi.js"></script>
+    <script  src="./assets/js/photo.js"></script>
+    <script  src="./assets/js/map.js"></script>
+    <script  src="./assets/js/airports.js"></script>
 </body>
 
 </html>
