--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="icon" type="image/webp" href="./assets/images/fav.webp">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="icon" type="image/webp" href="./Assets/images/fav.webp">
+    <link rel="stylesheet" href="./Assets/css/style.css">
 
     <title>GlobalGlide</title>
 </head>
@@ -21,7 +21,7 @@
     <header>
         <div class="video-container">
             <video autoplay muted loop>
-                <source src="./assets/images/video2.mp4" type="video/mp4">
+                <source src="./Assets/images/video2.mp4" type="video/mp4">
             </video>
             <h1 class="video-text"><span>Globe</span> Glide</h1>
             <div class="advert-container">
@@ -151,14 +151,14 @@
     <script defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQhZnG76vyt0FnliqNxQa_Npqa1hrYn2c&callback=initMap">
         </script>
-    <script type="text/javascript" src="./assets/js/script.js"></script>
+    <script type="text/javascript" src="./Assets/js/script.js"></script>
     <!-- Point of interest, restaurant -->
-    <script src="./assets/js/citiesofcountry.js"></script>
-    <script  src="./assets/js/currency.js"></script>
-    <script  src="./assets/js/poi.js"></script>
-    <script  src="./assets/js/photo.js"></script>
-    <script  src="./assets/js/map.js"></script>
-    <script  src="./assets/js/airports.js"></script>
+    <script src="./Assets/js/citiesofcountry.js"></script>
+    <script  src="./Assets/js/currency.js"></script>
+    <script  src="./Assets/js/poi.js"></script>
+    <script  src="./Assets/js/photo.js"></script>
+    <script  src="./Assets/js/map.js"></script>
+    <script  src="./Assets/js/airports.js"></script>
 </body>
 
 </html>
