remove js folder

--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
     <script defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQhZnG76vyt0FnliqNxQa_Npqa1hrYn2c&callback=initMap">
         </script>
-    <script type="text/javascript" src="./Assets/js/script.js"></script>
+    <script type="text/javascript" src="./script.js"></script>
     <!-- Point of interest, restaurant -->
-    <script src="./Assets/js/citiesofcountry.js"></script>
-    <script  src="./Assets/js/currency.js"></script>
-    <script  src="./Assets/js/poi.js"></script>
-    <script  src="./Assets/js/photo.js"></script>
-    <script  src="./Assets/js/map.js"></script>
-    <script  src="./Assets/js/airports.js"></script>
+    <script src="./citiesofcountry.js"></script>
+    <script  src="./currency.js"></script>
+    <script  src="./poi.js"></script>
+    <script  src="./photo.js"></script>
+    <script  src="./map.js"></script>
+    <script  src="./airports.js"></script>
 </body>
 
 </html>
