--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     <!-- Header -->
     <header>
-        <div class="video-container">
+        <!-- <div class="video-container">
             <video autoplay muted loop>
                 <source src="./Assets/images/video2.mp4" type="video/mp4">
-            </video>
+            </video> -->
             <h1 class="video-text"><span>Globe</span> Glide</h1>
             <div class="advert-container">
                 <h2 class="advert">Discover comprehensive destination details conveniently gathered in one location for
